fix gap between banner and footer

--- a/app/assets/stylesheets/components/_landing-page.scss
+++ b/app/assets/stylesheets/components/_landing-page.scss
@@ -107,7 +107,7 @@
 }
 
 .landing-background {
-  background-position: bottom;
-  background-size: cover;
-  height: 90%;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
 }
